2005-10-11  Adele Peterson <adele@apple.com>

        Rolling out Darin's previous change.

        * fast/clip/014-expected.checksum: Updated.
        * fast/clip/014-expected.png: Updated.

2005-10-10  Darin Adler  <darin@apple.com>

        - updated expected results due to fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5195

        The old results were incorrectly clipped. This always worked fine in the
        browser, but didn't draw correctly in DumpRenderTree until the bug was fixed.

        * fast/clip/014-expected.checksum: Updated.
        * fast/clip/014-expected.png: Updated.

2005-10-09  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        - added a test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5280
          Date.setMonth fails with negative values

        * fast/js/date-negative-setmonth-expected.txt: Added.
        * fast/js/date-negative-setmonth.html: Added.

2005-10-08  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        - added a test for http://bugzilla.opendarwin.org/show_bug.cgi?id=5266
          Support parenthesized comments in Date.parse()

        * fast/js/date-parse-comments-test-expected.txt: Added.
        * fast/js/date-parse-comments-test.html: Added.

2005-10-08  Alexey Proskuryakov  <ap@nypop.com>

        - added a test case for XSLT charset support
          http://bugzilla.opendarwin.org/show_bug.cgi?id=5244

        * fast/xsl/xslt-entity-enc.xml: Added.
        * fast/xsl/resources/xslt-entity-enc.xsl: Added.
        * fast/xsl/xslt-entity-enc-expected.txt: Added.

2005-10-08  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Hyatt.

        - fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=5148
          Rendering regressions in the Acid2 test cannot be detected

        * fast/css/acid2-pixel-expected.checksum: Added.
        * fast/css/acid2-pixel-expected.png: Added.
        * fast/css/acid2-pixel-expected.txt: Added.
        * fast/css/acid2-pixel.html: Added.
